# budgie-advanced-brightness-controller

./: README.md  UBrightnessController.py  executor.py  install.sh  meson.build  ubrightnesscontroller  ubrightnesscontroller.plugin  uninstall.sh
icons/: meson.build
src/: Applet.vala  meson.build
src/UBrightnessController/: BackLightHelper.py  Log.py  Makefile.am  UBrightnessController.py  XrandrHelper.py  check_displays.py  ubrightnesscontroller.plugin
src/budgie-advanced-brightness-controller/: AdvancedBrightnessController.py  BackLightHelper.py  Makefile.am  MyLog.py  XrandrHelper.py  advancedbrightnesscontroller.plugin
src/helpers/: ConfigHelper.vala  DimHelper.vala  LightHelper.vala  SubprocessHelper.vala
src/models/: Dim.vala
src/widgets/: Popover.vala
